# evo__django

./: .bandit  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.override.dev.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: main-workflow.yml  python-main.yml
.run/: Run django.run.xml
apps/accounts/: forms.py  urls.py  views.py
apps/base/: urls.py  views.py
apps/humans/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/humans/migrations/: 0001_initial.py  0001_squashed_0002_remove_human_profession.py  0002_human_avatar.py  0002_human_favourite_color.py  0003_color_human_favourite_color_by_foreign_key.py  0004_human_favourite_color_many_to_many_and_more.py  0005_superhuman.py  0006_human_avatar.py
apps/humans/views/: __init__.py  create.py  human_delete_view.py  human_list_view.py  human_update_view.py
apps/password_generator/: constants.py  services.py  tests.py  urls.py
apps/password_generator/views/: __init__.py  password_generator.py
apps/session_experiments/: apps.py  urls.py  views.py
apps/sessions_example/: urls.py  views.py
apps/templates/: _base.html  _header.html  index.html
apps/users/: forms.py  urls.py  views.py
core/: settings.py  urls.py
docker/app/: entrypoint.sh  start.sh
docker/db/: Dockerfile
password_generator/: apps.py  constants.py  services.py  urls.py  views.py
password_generator/views/: __init__.py  password_generator.py
(+19 files in other folders)
