[project]
requires-python = ">=3.10"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']
extend-exclude = [
    "venv",
]

[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
]
[tool.mypy-environ.'*']
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "core.settings"

#[tool.pydocstringformatter]
#write = true
#exclude = [
#    "venv",
#]
